# data_pipeline

./: .gitignore  Dockerfile  LICENSE  README.md  context_uus.txt  create_context.py  data-pipeline-project-code.txt  dev-requirements.txt  docker-compose.yaml  docker-compose.yml  pyproject.toml
config/: logging.toml  pipeline.toml
data/raw/: gps_20260512_192849.csv  gps_20260512_194307.csv  gps_20260512_194337.csv  gps_20260512_194413.csv  gps_20260512_194655.csv
data/raw/source=gps/date=2026-05-12/: gps_20260512_202701.csv  gps_20260512_203117.csv  gps_20260512_204718.csv  gps_20260512_204726.csv  gps_20260512_204730.csv  gps_20260512_205017.csv  gps_20260512_210722.csv  gps_20260512_212351.csv  gps_20260512_212422.csv  gps_20260512_212452.csv  gps_20260512_212522.csv
docs/: architecture_fix.md  draft_architecture_design.md
scripts/: migrate_to_utc.py
src/data_pipeline/: __init__.py  __main__.py  cli.py  constants.py  main.py
src/data_pipeline/core/: config.py  logger.py
src/data_pipeline/ingestion/: __init__.py  base.py  dummy_ingest.py  gps.py  gtfs.py  ingest_gps.py  ingest_gtfs.py
src/data_pipeline/utils/: config_loader.py  logging_setup.py
