[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "data-pipeline"
version = "0.1.0"
description = "A modular data pipeline framework."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.scripts]
data-pipeline = "data_pipeline.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]